// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookImage Component matches the snapshot for a faulty image 1`] = `
<div
  className="budNPo"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Select image
</div>
`;

exports[`FacebookImage Component matches the snapshot for a landscape image 1`] = `
<div
  className="caajba"
  mode="landscape"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <img
    alt=""
    className="dAFSQH"
    src="https://yoast.com/app/uploads/2015/06/How_to_choose_keywords_FI.png"
  />
</div>
`;

exports[`FacebookImage Component matches the snapshot for a portrait image 1`] = `
<div
  className="hLXFjt"
  mode="portrait"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <img
    alt=""
    className="jkSDlU"
    src="https://yoast.com/app/uploads/2015/09/Author_Joost_x2.png"
  />
</div>
`;

exports[`FacebookImage Component matches the snapshot for a square image 1`] = `
<div
  className="gAWKUL"
  mode="square"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <img
    alt=""
    className="bLQVUI"
    src="https://yoast.com/app/uploads/2018/09/avatar_user_1_1537774226.png"
  />
</div>
`;

exports[`FacebookImage Component matches the snapshot for a too small image 1`] = `
<div
  className="gAWKUL"
  mode="square"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <img
    alt=""
    className="knxvfW"
    src="https://yoast.com/app/uploads/2018/11/Logo_TYPO3-250x105.png"
  />
</div>
`;

exports[`FacebookImage Component matches the snapshot in the loading state 1`] = `
<div
  className="budNPo"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Select image
</div>
`;
